kubernetes/apps/netbird-dashboard/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: netbird-dashboard
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: netbird
  to:
    - group: ""
      kind: Service
      name: netbird-dashboard
