kubernetes/apps/netbird-dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: netbird-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: netbird-dashboard
    spec:
      containers:
        - name: netbird-dashboard
          image: docker.io/netbirdio/dashboard:v2.91.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 60
            periodSeconds: 5
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - DAC_OVERRIDE
                - SETGID
                - SETUID
            seccompProfile:
              type: RuntimeDefault
