kubernetes/apps/netbird-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbird-dashboard
spec:
  selector:
    app.kubernetes.io/name: netbird-dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
